fix spacing around save buttons

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -149,7 +149,7 @@ body.cacap .cacap-edit-buttons.cacap-edit-buttons-bottom {
 	position: relative;
 	bottom: auto;
 	width: 940px;
-	margin: 2em auto 0 auto;
+	margin: 0 auto 3em;
 	color: #777;
 }
 
